--- a/Gfighting/Assembly-CSharp.csproj
+++ b/Gfighting/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Scripst\CameraController.cs" />
     <Compile Include="Assets\Scripst\PlayerController.cs" />
     <Compile Include="Assets\Scripst\idleBehaviour.cs" />
+    <Compile Include="Assets\Scenes\HowToPlay\Scripts\ExitButton.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Scenes\scene_win\TextMesh Pro\Shaders\TMPro.cginc" />
